Added ZGC to benchmarks in case GC is a factor.
```
./run.ps1 ser --apis stream --libs "libgdx,jackson,gson,dsljson,fastjson"
...
Benchmark                         Mode  Cnt        Score        Error  Units
Serialization.gson               thrpt   20   951513.589 ±  28294.372  ops/s
Serialization.jackson            thrpt   20  3245205.875 ±  18333.969  ops/s
Serialization.libgdx_JsonString  thrpt   20  2117777.458 ± 129965.207  ops/s
Serialization.libgdx_JsonValue   thrpt   20  1570682.857 ±  11517.930  ops/s
Serialization.libgdx_JsonWriter  thrpt   20  1278273.285 ± 182119.899  ops/s
```